# mopac

./: .gitignore  AUTHORS.rst  CITATION.cff  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.rst  COPYRIGHT  Dockerfile  MOPAC_Makefile_files.txt  Makefile  README.md  paper.bib  paper.md  relicense.py
math/: CMakeLists.txt  README.md  math_wrap.c
src/: API-example.F90  CMakeLists.txt  CPE_Energy.F90  Common_arrays_C.F90  GetDateStamp.F90  H_bond_correction_EC_plus_ER.F90  H_bond_correction_EH_plus.F90  H_bond_correction_PM6_DH_Dispersion.F90  H_bond_correction_PM6_DH_type.F90  H_bond_correction_bits.F90  H_bonds4.F90  Hydrogen_bond_corrections.F90  MOPAC for Windows.F90  MOZYME_C.F90  Param_global_C.F90  Password.F90  README.md  aababc.F90  aababc_I.F90  aabacd.F90  aabacd_I.F90  aabbcd.F90  aabbcd_I.F90  add_hydrogen_atoms.F90  add_more_interactions.F90  addfck_I.F90  addhcr_I.F90  addnuc_I.F90  adjvec.F90  afmm_mod.F90  aijm_I.F90  aintgs_I.F90  alpb_and_xfac_am1.F90  alpb_and_xfac_mndo.F90  alpb_and_xfac_mndod.F90  alpb_and_xfac_pm3.F90  alphaf_I.F90  analyt.F90  analyt_C.F90  anavib.F90  (+679 more)
src/D3/: CMakeLists.txt  README.md  dftd3_bits.F90
src/INDO/: CMakeLists.txt  README.md  ci.F90  cosci.F90  excite.F90  input.F90  integral.F90  ovlp.F90  rci.F90  reimers_C.F90  scf.F90  subs.F90
src/MOZYME/: CMakeLists.txt  MOZYME_C.F90  MOZYME_eigs.F90  README.md  add_more_interactions.F90  addhb.F90  adjvec.F90  bonds_for_MOZYME.F90  buildf.F90  check.F90  chrge_for_MOZYME.F90  cnvgz.F90  compct.F90  convert_storage.F90  denrot_for_MOZYME.F90  density_for_MOZYME.F90  diagg.F90  diagg1.F90  diagg2.F90  dipole_for_MOZYME.F90  eimp.F90  epseta.F90  fillij.F90  fock1_for_MOZYME.F90  fock2z.F90  hbonds.F90  hcore_for_MOZYME.F90  helecz.F90  hybrid.F90  isitsc.F90  iter_for_MOZYME.F90  jab_for_MOZYME.F90  kab_for_MOZYME.F90  local2.F90  local_for_MOZYME.F90  makvec.F90  mbonds.F90  mlmo.F90  outer1.F90  outer2.F90  (+9 more)
src/PARAM/: CMakeLists.txt  Param_global_C.F90  README.md  chkpar.F90  datinp.F90  depfn.F90  direct.F90  empire.F90  extract_parameter.F90  filusp.F90  finish.F90  getmol.F90  getpar.F90  optgeo.F90  param.F90  pardip.F90  parfg.F90  pargeo.F90  parips.F90  parkey.F90  partab.F90  pparsav.F90  psort.F90  rapid0.F90  rapid1.F90  rapid2.F90  rapid3.F90  resetp.F90  savgeo.F90
src/SCF/: CMakeLists.txt  README.md  capcor.F90  cnvg.F90  fock1.F90  fock2.F90  iter.F90  iter_C.F90  local.F90  pulay.F90  resolv.F90  swap.F90
src/bz/: CMakeLists.txt  Details_of_cursor_point.F90  HEigensystem.F90  README.md  add_missing_cells.F90  blas.F90  bz.F90  calculate.F90  calculate_interface.F90  cntour.F90  common_common.F90  digit.F90  draw.F90  euler.F90  graphics.F90  graphics_for_FORCHECK.F90  kpoint.F90  lower.F90  make_line.F90  minv.F90  orient.F90  point.F90  reada.F90  rot.F90  rotcel.F90  rotsec.F90  rsp.F90  setup.F90  solir.F90  sort.F90  surfac.F90  symtrz.F90  upcase.F90  vastkind.F90
src/chemistry/: CMakeLists.txt  PDB3.F90  README.md  add_hydrogen_atoms.F90  atomradii_C.F90  atomrs.F90  chkion.F90  chklew.F90  findn1.F90  geochk.F90  geochk_bits_1.F90  geochk_bits_2.F90  greek.F90  lewis.F90  ligand.F90  lyse.F90  names.F90  nxtmer.F90  orient_water.F90  reseq.F90  txtype.F90
src/corrections/: CMakeLists.txt  H_bond_correction_EC_plus_ER.F90  H_bond_correction_EH_plus.F90  H_bond_correction_PM6_DH_Dispersion.F90  H_bond_correction_PM6_DH_type.F90  H_bond_correction_bits.F90  H_bonds4.F90  Hydrogen_bond_corrections.F90  README.md  copyc6.F90  dftd3.F90  dftd3_bits.F90  disp_DnX.F90  gdisp.F90  post_scf_corrections.F90  set_up_dentate.F90
src/cosmo/: CMakeLists.txt  README.md  cosmo.F90  cosmo_C.F90
src/deprecated/: GetDateStamp.F90  MOPAC_for_Windows.F90  Password.F90  QuickWin_bits.F90  analyt.F90  analyt_C.F90  asum_I.F90  break_I.F90  ccprod_I.F90  dcopy_I.F90  dfport.F90  dgemv_I.F90  dimens_I.F90  dist2.F90  dofs.F90  esn_I.F90  euler_C.F90  invfn.F90  ionout.F90  jdate.F90  mkl_bits.F90  mod_calls_cublas.F90  mod_gpu_info.F90  mod_iso_c_binding.F90  mod_vars_cuda.F90  mopac for export.F90  newflg.F90  output_cc_rep_fn.F90  pulay_for_gpu.F90  refkey_C.F90  repp.F90  rotlmo.F90  sort.F90  values.F90
src/forces/: CMakeLists.txt  README.md  anavib.F90  dcart.F90  delsta.F90  deri0.F90  deri1.F90  deri2.F90  deri21.F90  deri22.F90  deri23.F90  deritr.F90  deriv.F90  dernvo.F90  dfield.F90  dfock2.F90  dhc.F90  dhcore.F90  dijkl1.F90  dijkl2.F90  fmat.F90  force.F90  forsav.F90  frame.F90  freqcy.F90  intfc.F90  jcarin.F90  xyzcry.F90
src/geometry/: CMakeLists.txt  README.md  axis.F90  bangle.F90  cross.F90  dang.F90  dihed.F90  gmetry.F90  symtry.F90  volume.F90  xyzint.F90
src/input/: CMakeLists.txt  (+18 more)
tests/: ADD-H_Bacteriorhodopsin_1AP9.arc  ADD-H_Bacteriorhodopsin_1AP9.html  ADD-H_Bacteriorhodopsin_1AP9.mop  ADD-H_Bacteriorhodopsin_1AP9.out  ADD-H_Bacteriorhodopsin_1AP9.txt  ADD-H_Bacteriorhodopsin_1AT9.arc  ADD-H_Bacteriorhodopsin_1AT9.mop  ADD-H_Bacteriorhodopsin_1AT9.out  Au_Add-H.arc  Au_Add-H.mop  Au_Add-H.out  Bacteriorhodopsin_1AP9.ent  Bacteriorhodopsin_1AT9.ent  Bacteriorhodopsin_1BRR.ent  Bacteriorhodopsin_1BRX.ent  Bacteriorhodopsin_1C3W.ent  Bacteriorhodopsin_2AT9.ent  CMakeLists.txt  Check_that_TERs_are_preserved.arc  Check_that_TERs_are_preserved.html  Check_that_TERs_are_preserved.mop  Check_that_TERs_are_preserved.out  Check_that_TERs_are_preserved.txt  Compare_ADD-H_1EJG_and_1CBN.html  Compare_ADD-H_1EJG_and_1CBN.mop  Compare_ADD-H_1EJG_and_1CBN.out  Compare_ADD-H_1EJG_and_1CBN.txt  Compare_PDB_1EJG_and_1CBN.html  Compare_PDB_1EJG_and_1CBN.mop  Compare_PDB_1EJG_and_1CBN.out  Compare_PDB_1EJG_and_1CBN.txt  Compare_PDB_Bacteriorhodopsin_1AP9_and_1AT9.html  Compare_PDB_Bacteriorhodopsin_1AP9_and_1AT9.mop  Compare_PDB_Bacteriorhodopsin_1AP9_and_1AT9.out  Compare_PDB_Bacteriorhodopsin_1AP9_and_1AT9.txt  Compare_PDB_Bacteriorhodopsin_1AP9_and_1BRR.html  Compare_PDB_Bacteriorhodopsin_1AP9_and_1BRR.mop  Compare_PDB_Bacteriorhodopsin_1AP9_and_1BRR.out  Compare_PDB_Bacteriorhodopsin_1AP9_and_1BRR.txt  Compare_PDB_Bacteriorhodopsin_1AP9_and_1BRX.html  (+162 more)
(+12602 files in other folders)
